NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_FSE__c.field-meta.xml
<CustomField>
    <fullName>NATT_FSE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Service Engineer (FSE)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts5</relationshipName>
    <type>Lookup</type>
</CustomField>