NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_General_Management_Comments__c.field-meta.xml
<CustomField>
    <fullName>NATT_General_Management_Comments__c</fullName>
    <description>for NATT</description>
    <label>General Management Comments</label>
    <type>TextArea</type>
</CustomField>