NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Grandparent__c.field-meta.xml
<CustomField>
    <fullName>NATT_Grandparent__c</fullName>
    <formula>Parent.Parent.Name</formula>
    <label>Grandparent</label>
    <type>Text</type>
</CustomField>