NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Grouping_Account__c.field-meta.xml
<CustomField>
    <fullName>NATT_Grouping_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grouping Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dealer Group - CPQ Sharing</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Grouping Account)</relationshipLabel>
    <relationshipName>GroupingAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>