NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Handling__c.field-meta.xml
<CustomField>
    <fullName>NATT_Handling__c</fullName>
    <description>NATT</description>
    <label>Handling</label>
    <length>255</length>
    <type>Text</type>
</CustomField>