NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Industry_Segment_Trailer__c.field-meta.xml
<CustomField>
    <fullName>NATT_Industry_Segment_Trailer__c</fullName>
    <description>Represents the industry segment for the trailer business type</description>
    <label>Industry Segment - Trailer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Over-the-road</fullName>
            </value>
            <value>
                <fullName>Distribution</fullName>
            </value>
            <value>
                <fullName>Grocery</fullName>
            </value>
            <value>
                <fullName>Dairy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>