NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Industry_Segment_Truck__c.field-meta.xml
<CustomField>
    <fullName>NATT_Industry_Segment_Truck__c</fullName>
    <description>Represents the industry segments for the ruck business type</description>
    <label>Industry Segment - Truck</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dairy</fullName>
            </value>
            <value>
                <fullName>Ice</fullName>
            </value>
            <value>
                <fullName>Meat</fullName>
            </value>
            <value>
                <fullName>Seafood</fullName>
            </value>
            <value>
                <fullName>Produce</fullName>
            </value>
            <value>
                <fullName>Florist</fullName>
            </value>
            <value>
                <fullName>Beverage</fullName>
            </value>
            <value>
                <fullName>General Distribution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>