NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Internet_Search__c.field-meta.xml
<CustomField>
    <fullName>NATT_Internet_Search__c</fullName>
    <description>NATT</description>
    <label>Internet Search</label>
    <type>Date</type>
</CustomField>