NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_JDE_Parent_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>NATT_JDE_Parent_Account_Code__c</fullName>
    <label>JDE Parent Account Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>