NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_JDE_Parts_Bill_To_Code__c.field-meta.xml
<CustomField>
    <fullName>NATT_JDE_Parts_Bill_To_Code__c</fullName>
    <description>JDE Address number used for the PPG Parts Bill-To Account</description>
    <externalId>true</externalId>
    <label>JDE Parts Bill To Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>