NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_JDE_Unit_Bill_To_Code__c.field-meta.xml
<CustomField>
    <fullName>NATT_JDE_Unit_Bill_To_Code__c</fullName>
    <description>NATT</description>
    <externalId>true</externalId>
    <label>JDE Unit Bill To Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>