NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_JDE_Update__c.field-meta.xml
<CustomField>
    <fullName>NATT_JDE_Update__c</fullName>
    <label>JDE Update</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>