NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Leasing_Business__c.field-meta.xml
<CustomField>
    <fullName>NATT_Leasing_Business__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NATT</description>
    <label>Leasing Business</label>
    <type>Checkbox</type>
</CustomField>