NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Leasing_Business_Comments__c.field-meta.xml
<CustomField>
    <fullName>NATT_Leasing_Business_Comments__c</fullName>
    <description>NATT</description>
    <label>Leasing Business Comments</label>
    <length>225</length>
    <type>Text</type>
</CustomField>