NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Leasing_DirectDrive_ThermoKing__c.field-meta.xml
<CustomField>
    <fullName>NATT_Leasing_DirectDrive_ThermoKing__c</fullName>
    <description>Field that represents the company that leased a ThermoKing direct drive.</description>
    <label>Leasing Company- Direct Drive ThermoKing</label>
    <length>30</length>
    <type>Text</type>
</CustomField>