NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Legacy_Revision_History__c.field-meta.xml
<CustomField>
    <fullName>NATT_Legacy_Revision_History__c</fullName>
    <label>Legacy Revision History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>