NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_LocallyControlled_Purchases_APU__c.field-meta.xml
<CustomField>
    <fullName>NATT_LocallyControlled_Purchases_APU__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines a locally controlled APU purchase</description>
    <label>Locally Controlled Purchases - APU</label>
    <type>Checkbox</type>
</CustomField>