NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_LocallyControlled_Purchases_Trailer__c.field-meta.xml
<CustomField>
    <fullName>NATT_LocallyControlled_Purchases_Trailer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines a locally controlled trailer purchase</description>
    <label>Locally Controlled Purchases - Trailer</label>
    <type>Checkbox</type>
</CustomField>