NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_LocallyControlled_Purchases_Truck__c.field-meta.xml
<CustomField>
    <fullName>NATT_LocallyControlled_Purchases_Truck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines a locally controlled truck purchase</description>
    <label>Locally Controlled Purchases - Truck</label>
    <type>Checkbox</type>
</CustomField>