NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Market_Segment2__c.field-meta.xml
<CustomField>
    <fullName>NATT_Market_Segment2__c</fullName>
    <description>NATT</description>
    <label>Market Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NATT_Market_Segment</valueSetName>
    </valueSet>
</CustomField>