NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Market_Segment__c.field-meta.xml
<CustomField>
    <fullName>NATT_Market_Segment__c</fullName>
    <description>NATT</description>
    <label>Market Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>ABL</fullName>
                <label>APU/Box Car/Lease</label>
            </value>
            <value>
                <fullName>ABO</fullName>
                <label>APU/Box Car/Owned</label>
            </value>
            <value>
                <fullName>ADL</fullName>
                <label>APU/Distribution/Lease</label>
            </value>
            <value>
                <fullName>ADO</fullName>
                <label>APU/Distribution/Owned</label>
            </value>
            <value>
                <fullName>AFL</fullName>
                <label>APU/For Hire/Lease</label>
            </value>
            <value>
                <fullName>AFO</fullName>
                <label>APU/For Hire/Owned</label>
            </value>
            <value>
                <fullName>AGL</fullName>
                <label>APU/Grocery/Lease</label>
            </value>
            <value>
                <fullName>AGO</fullName>
                <label>APU/Grocery/Owned</label>
            </value>
            <value>
                <fullName>AIL</fullName>
                <label>APU/Intermodal/Lease</label>
            </value>
            <value>
                <fullName>AIO</fullName>
                <label>APU/Intermodal/Owned</label>
            </value>
            <value>
                <fullName>ALL</fullName>
                <label>APU/Leasing/Lease</label>
            </value>
            <value>
                <fullName>ALO</fullName>
                <label>APU/Leasing/Owned</label>
            </value>
            <value>
                <fullName>ASL</fullName>
                <label>APU/Stock/Lease</label>
            </value>
            <value>
                <fullName>ASO</fullName>
                <label>APU/Stock/Owned</label>
            </value>
            <value>
                <fullName>DBL</fullName>
                <label>Diesel/Box Car/Lease</label>
            </value>
            <value>
                <fullName>DBO</fullName>
                <label>Diesel/Box Car/Owned</label>
            </value>
            <value>
                <fullName>DDL</fullName>
                <label>Diesel/Distribution/Lease</label>
            </value>
            <value>
                <fullName>DDO</fullName>
                <label>Diesel/Distribution/Owned</label>
            </value>
            <value>
                <fullName>DFL</fullName>
                <label>Diesel/For Hire/Lease</label>
            </value>
            <value>
                <fullName>DFO</fullName>
                <label>Diesel/For Hire/Owned</label>
            </value>
            <value>
                <fullName>DGL</fullName>
                <label>Diesel/Grocery/Lease</label>
            </value>
            <value>
                <fullName>DGO</fullName>
                <label>Diesel/Grocery/Owned</label>
            </value>
            <value>
                <fullName>DIL</fullName>
                <label>Diesel/Intermodal/Lease</label>
            </value>
            <value>
                <fullName>DIO</fullName>
                <label>Diesel/Intermodal/Owned</label>
            </value>
            <value>
                <fullName>DLL</fullName>
                <label>Diesel/Leasing/Lease</label>
            </value>
            <value>
                <fullName>DLO</fullName>
                <label>Diesel/Leasing/Owned</label>
            </value>
            <value>
                <fullName>DSL</fullName>
                <label>Diesel/Stock/Lease</label>
            </value>
            <value>
                <fullName>DSO</fullName>
                <label>Diesel/Stock/Owned</label>
            </value>
            <value>
                <fullName>HBL</fullName>
                <label>Heat/Box Car/Lease</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>