NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_MK_Denial__c.field-meta.xml
<CustomField>
    <fullName>NATT_MK_Denial__c</fullName>
    <description>NATT</description>
    <label>MK Denial</label>
    <type>Date</type>
</CustomField>