NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Number_of_Parts_People__c.field-meta.xml
<CustomField>
    <fullName>NATT_Number_of_Parts_People__c</fullName>
    <description>NATT</description>
    <label>Number of Parts People</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>