NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Number_of_Refrigeration_Techs__c.field-meta.xml
<CustomField>
    <fullName>NATT_Number_of_Refrigeration_Techs__c</fullName>
    <description>NATT</description>
    <label>Number of Refrigeration Techs</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>