NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Operating_Hours__c.field-meta.xml
<CustomField>
    <fullName>NATT_Operating_Hours__c</fullName>
    <description>NATT</description>
    <label>Operating Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>