NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Organization__c.field-meta.xml
<CustomField>
    <fullName>NATT_Organization__c</fullName>
    <description>NATT</description>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Geography</valueSetName>
    </valueSet>
</CustomField>