NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Other__c.field-meta.xml
<CustomField>
    <fullName>NATT_Other__c</fullName>
    <defaultValue>false</defaultValue>
    <description>for NATT</description>
    <label>Other</label>
    <type>Checkbox</type>
</CustomField>