NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Other_Primary_Trailer_OEM__c.field-meta.xml
<CustomField>
    <fullName>NATT_Other_Primary_Trailer_OEM__c</fullName>
    <description>NATT</description>
    <label>Other Primary Trailer OEM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>