NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Over_25M_Equipment_Sales__c.field-meta.xml
<CustomField>
    <fullName>NATT_Over_25M_Equipment_Sales__c</fullName>
    <description>Over $25M Equipment Sales</description>
    <inlineHelpText>Approval Refrigeration President &amp; CFO</inlineHelpText>
    <label>Over $25M Equipment Sales</label>
    <type>Date</type>
</CustomField>