NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Over_50M_Equipment_Sales__c.field-meta.xml
<CustomField>
    <fullName>NATT_Over_50M_Equipment_Sales__c</fullName>
    <description>NATT</description>
    <inlineHelpText>Approval Carrier President &amp; Others</inlineHelpText>
    <label>Over $50M Equipment Sales</label>
    <type>Date</type>
</CustomField>