NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_PAR_Dealer_Account__c.field-meta.xml
<CustomField>
    <fullName>NATT_PAR_Dealer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Account Object that filters on Dealer Account types</description>
    <label>PAR / Dealer Account</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Dealer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Competitor Accounts</relationshipLabel>
    <relationshipName>CompetitorAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>