NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Parent_Reference_Name__c.field-meta.xml
<CustomField>
    <fullName>NATT_Parent_Reference_Name__c</fullName>
    <description>NATT</description>
    <formula>Parent.Name</formula>
    <label>Parent Reference Name</label>
    <type>Text</type>
</CustomField>