NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Parts_Account__c.field-meta.xml
<CustomField>
    <fullName>NATT_Parts_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NATT</description>
    <label>Parts Account</label>
    <type>Checkbox</type>
</CustomField>