NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Parts_BDM__c.field-meta.xml
<CustomField>
    <fullName>NATT_Parts_BDM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parts BDM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts7</relationshipName>
    <type>Lookup</type>
</CustomField>