NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Parts_BU__c.field-meta.xml
<CustomField>
    <fullName>NATT_Parts_BU__c</fullName>
    <description>NATT</description>
    <label>Parts BU</label>
    <length>4</length>
    <type>Text</type>
</CustomField>