NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Parts_Sales_Comments__c.field-meta.xml
<CustomField>
    <fullName>NATT_Parts_Sales_Comments__c</fullName>
    <description>For NATT</description>
    <label>Parts Sales Comments</label>
    <type>TextArea</type>
</CustomField>