NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>NATT_Payment_Terms__c</fullName>
    <description>Used on TES accounts to indicate if the account has terms or not</description>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Net 30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>