NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Physical_Address__c.field-meta.xml
<CustomField>
    <fullName>NATT_Physical_Address__c</fullName>
    <description>NATT</description>
    <formula>IF(NATT_Address_Physical__r.NATT_Street__c &lt;&gt; &quot;&quot;,NATT_Address_Physical__r.NATT_Street__c + BR(),NULL) +
IF(NATT_Address_Physical__r.NATT_City__c &lt;&gt; &quot;&quot;,NATT_Address_Physical__r.NATT_City__c + &quot;, &quot;,NULL) +
TEXT(NATT_Address_Physical__r.NATT_State_Province__c) + &quot; &quot; + NATT_Address_Physical__r.NATT_Zip_Postal_Code__c + BR() +
TEXT(NATT_Address_Physical__r.NATT_Country__c)</formula>
    <label>Physical Address</label>
    <type>Text</type>
</CustomField>