NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Price_List_Category__c.field-meta.xml
<CustomField>
    <fullName>NATT_Price_List_Category__c</fullName>
    <description>NATT</description>
    <label>Price List Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Internal 1</fullName>
            </value>
            <value>
                <fullName>Internal 2</fullName>
            </value>
            <value>
                <fullName>Internal 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>