NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Primary_Location_Type__c.field-meta.xml
<CustomField>
    <fullName>NATT_Primary_Location_Type__c</fullName>
    <description>for NATT Dealers only</description>
    <label>Primary Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Dealer</fullName>
            </value>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Associate</fullName>
            </value>
            <value>
                <fullName>Parts and Service</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Other/Auxiliary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>