NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Primary_Reefer_OEM__c.field-meta.xml
<CustomField>
    <fullName>NATT_Primary_Reefer_OEM__c</fullName>
    <description>NATT</description>
    <label>Primary Reefer OEM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carrier</fullName>
            </value>
            <value>
                <fullName>Thermoking</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>