NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Primary_Trailer_OEM__c.field-meta.xml
<CustomField>
    <fullName>NATT_Primary_Trailer_OEM__c</fullName>
    <description>NATT</description>
    <label>Primary Trailer OEM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Utility</fullName>
            </value>
            <value>
                <fullName>Great Dane</fullName>
            </value>
            <value>
                <fullName>Wabash</fullName>
            </value>
            <value>
                <fullName>Hyundai</fullName>
            </value>
            <value>
                <fullName>CAMC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>