NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Reason_for_Standing__c.field-meta.xml
<CustomField>
    <fullName>NATT_Reason_for_Standing__c</fullName>
    <description>NATT</description>
    <label>Reason for Standing</label>
    <length>225</length>
    <type>Text</type>
</CustomField>