NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Record_Type_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>NATT_Record_Type_Developer_Name__c</fullName>
    <description>NATT - to prevent account trigger from having to make additional query</description>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type Developer Name</label>
    <type>Text</type>
</CustomField>