NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Refrigeration_Trailer_Business_Type__c.field-meta.xml
<CustomField>
    <fullName>NATT_Refrigeration_Trailer_Business_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NATT - for Steve - not required for any downstream processes</description>
    <label>Refrigeration Trailer Business Type</label>
    <type>Checkbox</type>
</CustomField>