NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Region__c.field-meta.xml
<CustomField>
    <fullName>NATT_Region__c</fullName>
    <description>NATT</description>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>NATT_Organization__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Region</valueSetName>
    </valueSet>
</CustomField>