NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>NATT_Renewal_Date__c</fullName>
    <defaultValue>IF(CONTAINS($RecordType.DeveloperName,&apos;NATT&apos;),DATE(YEAR(TODAY())+1,1,1),null)</defaultValue>
    <description>NATT</description>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>