NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Sales_Dept_Phone__c.field-meta.xml
<CustomField>
    <fullName>NATT_Sales_Dept_Phone__c</fullName>
    <description>NATT</description>
    <label>Sales Dept Phone</label>
    <type>Phone</type>
</CustomField>