NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Sales_Square_Footage__c.field-meta.xml
<CustomField>
    <fullName>NATT_Sales_Square_Footage__c</fullName>
    <description>NATT</description>
    <label>Sales (Square Footage)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>