NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Sales_Target_Parts__c.field-meta.xml
<CustomField>
    <fullName>NATT_Sales_Target_Parts__c</fullName>
    <label>Sales Target - Parts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>