NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Sales_Target_Trailer__c.field-meta.xml
<CustomField>
    <fullName>NATT_Sales_Target_Trailer__c</fullName>
    <description>NATT</description>
    <label>Sales Target - Trailer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>