NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Send_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>NATT_Send_for_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used for the Dealer Account Admin to send an Account record for approval.</description>
    <label>Send for Approval</label>
    <type>Checkbox</type>
</CustomField>