NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Sponsor_Certification__c.field-meta.xml
<CustomField>
    <fullName>NATT_Sponsor_Certification__c</fullName>
    <description>NATT</description>
    <label>Sponsor Certification</label>
    <type>Date</type>
</CustomField>